# mleam

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yaml
data/: NiNi_ico13_curve.json  NiPt_ico13_curve.json  Ni_bulk_curve.json  PtNi_ico13_curve.json  PtPt_ico13_curve.json  Pt_bulk_curve.json
mleam/: constants.py  data_prep.py  imn2024.mplstyle  input_pipeline.py  layers.py  losses.py  preprocessing.py  utils.py
mleam/models/: __init__.py  bp_model.py  eam_models.py
mlff/: data_prep.py  layers.py  models.py  utils.py
mlff/models/: __init__.py  bp_model.py  eam_models.py
notebooks/: BehlerParrinello.ipynb  SMATB_training.py
scripts_and_notebooks/: Ackland_training.py  BP_normalization.ipynb  BP_training.py  FS_training.py  Johnson_training.py  NNF_training.ipynb  PES_scans.ipynb  SC_training.py  SMATB_training.py  descriptor_norms.json  simple_model_training.py  tf_splines.ipynb
test/: test_behler_parrinello.py  test_input_pipeline.py  test_models.py  test_smatb.py  test_utils.py  utils.py
test/LAMMPS_SMATB_reference/: NiPt.eam.fs  dump.force  lmp.in  log.lammps  tabulate_reference_SMATB.py
test/behler_parrinello_reference/: generate_input.py  mlpot_reference.py  mlpot_results.json
tests/: test_behler_parrinello.py  test_input_pipeline.py  test_layers.py  test_losses.py  test_models.py  test_preprocessing.py  test_smatb.py  test_utils.py  utils.py
tests/testresources/: test_data.json
tests/testresources/LAMMPS_SMATB_reference/: NiPt.eam.fs  data.NiPt  dump.force  log.lammps  (+1 more)
(+19 files in other folders)
